--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "forest-lynx/moonshine-decimal-field": "^1.3",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "moonshine/moonshine": "^2.20"
+        "lee-to/moonshine-tree-resource": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
