--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "forest-lynx/moonshine-decimal-field": "^1.3",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "lee-to/moonshine-tree-resource": "^1.0"
+        "lee-to/moonshine-tree-resource": "^1.0",
+        "prettus/l5-repository": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
